--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "homepage": "https://github.com/TheLegend27-ger/Webprogrammierung-Projekt#readme",
   "dependencies": {
     "express": "^4.17.3",
-    "mustache-express": "^1.3.2"
+    "express-session": "^1.17.2",
+    "mustache-express": "^1.3.2",
+    "pbkdf2-password": "^1.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
